--- a/taskManager/src/main/resources/application.properties
+++ b/taskManager/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.mvc.view.prefix=/view/
 spring.mvc.view.suffix=.jsp
 
 server.port = 8080
+server.servlet.context-path= /
 
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
